# pysupercut

./: .gitignore  README.md  pyproject.toml
.agents/: AGENTS.md
.plan/: D-01.md  F-01.md  F-02.md  F-03.md  F-04.md  M-01.md  M-02.md  M-03.md  M-04.md  P-01.md  P-02.md  PLAN.md  PO-01.md  PO-02.md  PO-03.md  PO-04.md  PO-05.md  S-01.md  S-02.md  S-03.md  ST-01.md  ST-02.md  ST-03.md  ST-04.md  T-01.md  T-02.md  T-03.md  T-04.md  T-05.md  checklist.md
src/pysupercut/: __init__.py  check.py  cli.py  fingerprint.py  match.py  pipeline.py  probe.py  report.py  stitch.py  timeline.py
